docs(i18n): sync i18n files from Crowdin (#10932)
* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

--- a/packages/plugins/GoPlusSecurity/src/locales/ko-KR.json
+++ b/packages/plugins/GoPlusSecurity/src/locales/ko-KR.json
@@ -65,5 +65,44 @@
     "risk_no_code_transfer_pausable_title": "거래를 중지할 코드를 검출하지 않습니다.",
     "risk_no_code_transfer_pausable_body": "일시 중단 가능한 코드가 포함되어 있는 경우 토큰을 구매하거나 판매하지 않을 수 있습니다(허니팟 리스크).",
     "risk_is_anti_whale_title": " Anti_Whale (거래 횟수 제한)",
-    "risk_is_anti_whale_body": "토큰 거래 횟수가 제한되어 있습니다. 스캠 토큰 거래 횟수가 제한될 수 있습니다(허니팟 리스크)."
+    "risk_is_anti_whale_body": "토큰 거래 횟수가 제한되어 있습니다. 스캠 토큰 거래 횟수가 제한될 수 있습니다(허니팟 리스크).",
+    "risk_is_no_anti_whale_title": "No anti_whale(거래 횟수 무제한)",
+    "risk_is_no_anti_whale_body": "토큰 거래 횟수가 무제한입니다. 스캠 토큰 거래 횟수가 제한될 수 있습니다(허니팟 리스크).",
+    "risk_slippage_modifiable_title": "세금 수정가능",
+    "risk_slippage_modifiable_body": " 건트랙트 소유자는 거래 세금의 수정 권한이 있을 수 있는데, 거래 세금이 49% 이상으로 인상되면 토큰을 거래할 수 없게 됩니다(허니팟 리스크).",
+    "risk_not_slippage_modifiable_title": "세금 수정 불가능",
+    "risk_not_slippage_modifiable_body": "건트랙트 소유자는 거래 세금의 수정 권한이 없을 수 있는데, 거래 세금이 49% 이상으로 인상되면 토큰을 거래할 수 없게 됩니다(허니팟 리스크).",
+    "risk_is_blacklisted_title": "블랙리스트 기능",
+    "risk_is_blacklisted_body": "블랙리스트 기능이 포함되어 있습니다. 일부 주소는 정상적으로 거래가 되지 않을 수 있습니다(허니팟 리스크).",
+    "risk_not_is_blacklisted_title": "블랙리스트 없음",
+    "risk_not_is_blacklisted_body": "블랙리스트 기능이 포함되지 않습니다. 블랙리스크가 있으면, 일부 주소는 정상적으로 거래가 되지 않을 수 있습니다(허니팟 리스크).",
+    "risk_is_whitelisted_title": "화이트리스트 기능",
+    "risk_is_whitelisted_body": "화이트리스트 기능이 포함되어 있습니다. 일부 주소는 정상적으로 거래가 되지 않을 수 있습니다(허니팟 리스크).",
+    "risk_not_is_whitelisted_title": "화이트리스트 없음",
+    "risk_not_is_whitelisted_body": "화이트리스트 기능이 포함되지 않습니다. 화이트리스크가 있으면, 일부 주소는 정상적으로 거래가 되지 않을 수 있습니다(허니팟 리스크).",
+    "risk_is_true_token_title": "진짜 토큰",
+    "risk_is_true_token_body": "이 토큰은 명확한 팀에서 발행합니다. 일부 스캠은 동일한 이름의 유명 토큰을 만들어 사용자의 자산을 편취합니다.",
+    "risk_not_is_true_token_title": "가짜 토큰",
+    "risk_not_is_true_token_body": "이 토큰은 명확한 팀에서 발행하는 것이 아닙니다. 일부 스캠은 동일한 이름의 유명 토큰을 만들어 사용자의 자산을 편취합니다.",
+    "risk_is_airdrop_scam_title": "에어드랍 스캠",
+    "risk_is_airdrop_scam_body": "이 토큰의 웹사이트를 승인하면 자산을 잃을 수 있습니다.",
+    "risk_not_is_airdrop_scam_title": "에어드랍 스캠 없음",
+    "risk_not_is_airdrop_scam_body": "에어드랍 스캠 아닙니다. 많은 사기가 에어드롭을 통해 사용자를 시기합니다.",
+    "contract_not_found": "캔트랙트 찾지 않음",
+    "unnamed": "이름없음",
+    "confirm": "확인",
+    "cancel": "취소",
+    "close_check_security": "[Check Security] 닫기",
+    "check_security_intro": "[Check Security] dApp은 빠르고, 신뢰할 수 있는 웹3 보안 서비스를 제공합니다.",
+    "check_security_close_warning": "[Check Security] 닫기로 결정한 경우 의심스럽거나 블랙리스트에 있거나 사기 가능성이 있는 컨트랙트 및 주소와 상호 작용할 때 보안 알림이 더 이상 표시되지 않습니다.",
+    "check_security_close_advice": "새로운 웹3 이용자에게 [Check Security] 열려 있는 상태를 유지하는 것을 권장합니다. ",
+    "risk_warning_short": "리스크 경고",
+    "risk_warning": "스왑 토큰 컨트렉트 리스크 확인",
+    "make_risk_trade": "계속 스왑",
+    "dear_user": "안녕하세요 유저님,",
+    "user_warning": "확인 버튼을 클릭하면 잠재적 위험을 감수하고 거래를 진행하는 데 동의한다는 말입니다.",
+    "wallet_status_button_copy_address": "주소 복사",
+    "view_on_explorer": "Explorer에서 보기",
+    "copy_success_of_token_addr": "토큰 복사 성공",
+    "swap_risk": "스왑 리스크 확인"
 }
