docs(i18n): sync i18n files from Crowdin (#10938)
* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

--- a/packages/mask/shared-ui/locales/ja-JP.json
+++ b/packages/mask/shared-ui/locales/ja-JP.json
@@ -558,6 +558,10 @@
     "plugin_trader_tx_cost_usd_new": "({{usd}})",
     "plugin_trader_tx_cost_very_small": "({{usd}})",
     "plugin_trader_gas_option": "{{option}} ({{value}}) Gwei",
+    "plugin_trader_no_enough_liquidity": "流動性が不足しています",
+    "plugin_trader_no_trade": "取引を選択してください",
+    "plugin_trader_swap_risk": "スワップリスク",
+    "plugin_trader_gas": "取引費用",
     "plugin_poll_display_name": "プラグイン: 投票",
     "plugin_poll_question_hint": "質問を入力してください...",
     "plugin_poll_options_hint": "オプション",
@@ -573,6 +577,21 @@
     "plugin_poll_status_voting": "投票しています",
     "plugin_poll_status_voted": "投票した.",
     "plugin_poll_deadline": "{{time}} で終了",
+    "plugin_collectibles_name": "コレクション",
+    "plugin_collectibles_description": "OpenSeaとRaribleのコレクションの具体的な情報を表示し、ソーシャルメディアで直接オファーします。",
+    "plugin_infra_descriptor_nft_approve_title": "{{action}} NFT コントラクト",
+    "plugin_infra_descriptor_nft_approve_success": "{{action}} {{symbol}} NFT のコントラクトが正常になりました。",
+    "plugin_infra_descriptor_nft_revoke_success": "{{action}} {{symbol}} の承認に成功しました。",
+    "plugin_infra_descriptor_nft_approve_fail": "{{action}} NFT コントラクトに失敗しました。",
+    "plugin_infra_descriptor_nft_transfer_title": "NFTを転送する",
+    "plugin_infra_descriptor_nft_transfer_fail": "トークンを転送できませんでした.",
+    "plugin_infra_descriptor_nft_transfer_success": "{{symbol}} NFT の転送に成功しました。",
+    "plugin_infra_descriptor_nft_transfer": "{{symbol}} NFTを転送。",
+    "plugin_infra_descriptor_token_revoke": "{{symbol}} の承認を取り消します。",
+    "plugin_infra_descriptor_token_transfer_title": "トークンを転送する",
+    "plugin_infra_descriptor_token_transfer": "{{- tokenAmountDescription}} を送信する。",
+    "plugin_infra_descriptor_token_transfer_fail": "トークンを送信できませんでした。",
+    "plugin_infra_descriptor_token_transfer_success": "{{- tokenAmountDescription}} を送信しました。",
     "plugin_infra_descriptor_token_revoke_title": "トークンを取り消す",
     "plugin_infra_descriptor_token_revoke_success": "承認を取り消しました。",
     "plugin_infra_descriptor_token_revoke_fail": "トークンコントラクトの取り消しに失敗しました。",
@@ -650,6 +669,36 @@
     "popups_add_persona_description": "ペルソナを使用してソーシャルメディアの投稿とメッセージを暗号化して復号化します。",
     "popups_create_a_new_wallet_title": "新しいウォレットを作成する",
     "popups_generate_a_new_wallet_address": "新しいウォレットアドレスを生成する",
+    "popups_generate_a_new_persona": "新しいペルソナを作成",
+    "popups_import_wallet": "ウォレットをインポート",
+    "popups_import_wallets": "ウォレットをインポート",
+    "popups_import_wallets_description": "ニーモニックフレーズ、秘密キー、キーストーンファイルを対応します。",
+    "popups_import_persona_description": "個人データにアクセスするために、IDコード、秘密鍵、ローカルバックアップ、またはクラウドバックアップを対応します。",
+    "popups_lock_wallet": "ウォレットをロックする",
+    "popups_wallet_settings": "ウォレットの設定",
+    "popups_verify_persona_sign_success": "ペルソナが正常に署名されました",
+    "popups_verify_persona_sign_failed": "ペルソナに署名できませんでした",
+    "popups_verify_wallet_sign_success": "ウォレットの署名に成功しました",
+    "popups_verify_wallet_sign_failed": "ウォレットに署名できませんでした",
+    "popups_profile_photo": "プロフィール写真",
+    "popups_public_key": "公開鍵",
+    "popups_create_persona": "ペルソナを作成",
+    "popups_restore_and_login": "復元またはログイン",
+    "popups_name": "名前",
+    "popups_connect_social_tips": "ソーシャルプラットフォームのアカウントに接続します。",
+    "popups_save_successfully": "正常に保存されました",
+    "popups_save_failed": "保存できませんでした",
+    "popups_display_web3_address_tips": "Web3プロフィールページに以下のアドレスを表示し、ヒントを受け取るために使用してください。",
+    "popups_verify_account_tips": "あなたのペルソナを接続し、確認した後、あなたのweb3 の足跡を表示するか、またはヒントを受け取るための関連付けられた住所をセットアップすることができる。",
+    "popups_other_social_accounts_tips": "Instagram、Facebook、Mindsなどの他のソーシャルネットワーキングプラットフォームには、TwitterのNext.ID認証接続のような認証関係はありません。\nこれらのプラットフォームでペルソナをアカウントに接続する場合、暗号化された投稿の送信のみがサポートされます。",
+    "popups_empty_wallet_proofs_tips": "関連するウォレットがありません。 <strong>ウォレットを追加します。</strong>",
+    "popups_social_account": "ソーシャルアカウント",
+    "popups_connected_wallets": "接続されたウォレット",
+    "popups_change_owner": "所有者変更",
+    "popups_wallet_connected_status$connected": "接続されました",
+    "popups_wallet_connected_status$unconnected": "接続されていません",
+    "popups_loading": "読み込み中",
+    "popups_connect_your_web2_social_accounts": "ソーシャルメディアのアカウントに接続",
     "popups_wallet_settings_change_network": "ネットワークを変更",
     "popups_wallet_settings_auto_unlock_time": "自動ロック時間",
     "popups_wallet_settings_auto_unlock_time_mins": "{{time}} 分",
@@ -664,5 +713,52 @@
     "popups_wallet_settings_rename_tips": "ウォレット名は3文字以上18文字以内で入力してください。",
     "popups_wallet_settings_name_exists": "すでに同じ名前が存在します。",
     "popups_wallet_settings_remove_wallet": "ウォレットを削除",
-    "remove_wallet_title": "ウォレットを削除しますか?"
+    "remove_wallet_title": "ウォレットを削除しますか?",
+    "popups_welcome": "ようこそ！",
+    "popups_wallet_token": "トークン",
+    "popups_wallet_collectible": "NFTs",
+    "popups_wallet_collectible_added_successfully": "正常に追加されました",
+    "popups_wallet_dialog_legacy_wallet_tip": "レガシーウォレットが検出されました。確認をクリックしてすべて復元してください。",
+    "popups_wallet_set_payment_password": "支払いパスワードの設定",
+    "popups_wallet_create_payment_password": "パスワードを作成",
+    "popups_wallet_payment_password": "決済パスワード",
+    "popups_wallet_set_up_payment_password": "支払いパスワードを設定",
+    "popups_wallet_old_payment_password": "以前の決済パスワード",
+    "popups_wallet_new_payment_password": "新しい決済パスワード",
+    "popups_wallet_confirm_password": "パスワードの確認",
+    "popups_wallet_new_password_not_match": "新しいパスワードが一致しません",
+    "popups_wallet_create_payment_password_tip": "6 文字以上",
+    "popups_wallet_set_payment_password_successfully": "支払いパスワードを正常に設定しました",
+    "popups_wallet_term_of_service_agree_part_1": "続行することで、以下に同意します。",
+    "popups_wallet_term_of_service_agree_part_2": "<agreement>サービス契約</agreement> および <policy>プライバシーポリシー</policy>",
+    "popups_wallet_reset_tips": "パスワードを忘れましたか？",
+    "popups_wallet_payment_password_tip": "決済パスワードは、数字、文字、特殊文字の2つのカテゴリの組み合わせで、8〜20文字の長さが必要です。",
+    "create_wallet_incorrect_payment_password": "現在のパスワードが正しくありません。",
+    "popups_wallet_start_up_tip": "ウォレットに接続し、新しいウォレットを作成するか、シードフレーズを使用して既存のウォレットを復元します。",
+    "popups_wallet_name_placeholder": "1〜12文字を入力してください",
+    "popups_wallet_name_mnemonic": "ニーモニック",
+    "popups_wallet_name_json_file": "Jsonファイル",
+    "popups_wallet_name_private_key": "秘密鍵",
+    "popups_wallet_name_keystore": "キーストア：",
+    "popups_wallet_name_mnemonic_placeholder": "12 または 24 のニーモニックワードを入力します。",
+    "popups_wallet_name_origin_password": "元のパスワード",
+    "popups_wallet_tab_assets": "トークン",
+    "popups_wallet_tab_collectibles": "NFTs",
+    "popups_wallet_tab_activity": "アクティビティ",
+    "popups_wallet_derivation_path": "派生パス ({{- path }})",
+    "popups_wallet_transfer_to": "宛先",
+    "popups_wallet_next": "次",
+    "popups_wallet_backup_wallet": "ウォレットをバックアップする",
+    "popups_wallet_backup_json_file": "JSONファイル",
+    "popups_wallet_backup_private_key": "秘密鍵",
+    "popups_wallet_reset_wallet": "ウォレットをリセットする",
+    "popups_wallet_reset_wallet_description_1": "お支払いパスワードはローカルに保存され、ウォレットのロックを解除するために何度も試すことができます。",
+    "popups_wallet_reset_wallet_description_2": "支払いパスワードを忘れた場合、ウォレットをリセットするために「リセット」を入力することができます。 <strong>覚えておいてください。この操作は以前のすべてのウォレットを消去します。</strong>",
+    "popups_wallet_reset_wallet_description_3": "注：前回のインポートで使用したニーモニックフレーズを使用している場合、そのニーモニックフレーズに由来するウォレットを復元することができます。",
+    "popups_wallet_backup_json_file_confirm_password_tip": "このファイルは暗号化され、現在のパスワードで保存されています。 ウォレットをインポートするには、このファイルを復号するために現在のパスワードが必要です。",
+    "popups_wallet_backup_private_key_tip": "秘密鍵は誰にも見せないでください。秘密鍵は、EVM互換チェーンに対応しているウォレットであれば、復号化せずに使用することができます。",
+    "popups_wallet_backup_input_password": "バックアップパスワードを入力してください。",
+    "popups_wallet_logout_input_payment_password": "支払いパスワードを入力してください。",
+    "popups_wallet_backup_json_file_drag_tip": "ファイルをここにドラッグしてください",
+    "popups_wallet_backup_json_file_click_tip": "ここにファイルをクリックまたはドラッグしてください"
 }
