fix: mf-5461 update ui in verify dialog

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -181,7 +181,7 @@
     "do_not_see_your_nft": "Don't see your NFT?",
     "import_nft": "Import NFT",
     "setup_guide_post_content": "Post content:",
-    "setup_guide_verify_tip": "We will need to verify your Twitter account and record it on the NextID. Please send this tweet for validation and hold.",
+    "setup_guide_verify_tip": "We will need to verify your Twitter account and record it on the NextID. Please post it for validation.",
     "setup_guide_login": "Please sign up or log in to connect Mask Network.",
     "setup_guide_find_username_text": "Link your profile to your persona.",
     "setup_guide_connect_auto": "Connect",
