fix: mf-5472 not connected account
MF-5458
MF-5478

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -86,7 +86,8 @@
     "request_to_login": "Please sign up or login {{- siteName}} to connect Mask Network.",
     "connected_already": "<bold>@{{- account}}</bold> connected already.",
     "switch_for_more_connections": "Switch accounts and try more connections.",
-    "send_post_successfully": "Sent verification post successfully.<br/> <br/> You could check the verification result on Mask Pop-up after few minutes. If failed, try sending verification post again.",
+    "send_post_successfully": "Sent verification post successfully.<br/> <br/>You could check the verification result on Mask Pop-up after few minutes. If failed, try sending verification post again.",
+    "connect_successfully": "Connected successfully. <br/><br/>Trying exploring more features powered by Mask Network.",
     "application_tooltip_hint_sns_persona_unmatched": "Twitter ID verified persona({{currentSNSConnectedPersonaPublicKey}}) is not consistent with your current persona({{currentPersonaPublicKey}}). Please switch to persona({{currentSNSConnectedPersonaPublicKey}}) and try again.",
     "application_tooltip_hint_verify": "Please verify your social account",
     "application_tooltip_hint_create_persona": "Please create your persona and use it",
