fix: file service ui

--- a/packages/plugins/FileService/src/locales/en-US.json
+++ b/packages/plugins/FileService/src/locales/en-US.json
@@ -48,5 +48,6 @@
     "delete_file_message$failed": "Failed to delete, please try again.",
     "upload_tips": "Please click Browse Files button to select files to upload.",
     "file_chip_single": "Attached File: {{name}} ({{size}})",
-    "file_chip_multiple": "{{count}} files selected"
+    "file_chip_multiple": "{{count}} files selected",
+    "size": "size"
 }
