--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -354,9 +354,9 @@
     "plugin_wallet_snackbar_failed": "Transaction Failed",
     "plugin_wallet_snackbar_swap_successful": "Successfully swapped Token",
     "plugin_wallet_snackbar_swap_token": "Swap Token",
-    "plugin_wallet_connect_with": "Connect with",
-    "plugin_wallet_connect_with_retry": "Try Again",
-    "plugin_wallet_connected_with": "Connected with",
+    "plugin_wallet_connect_to": "Connect to",
+    "plugin_wallet_connect_to_retry": "Try Again",
+    "plugin_wallet_connected_to": "Connected to",
     "plugin_wallet_metamask_error_already_request": "You've opened the popup, please confirm.",
     "plugin_wallet_connect_tip": "Please make sure that your {{providerName}} wallet is provided by the official <providerLink>{{providerShortenLink}}</providerLink>.",
     "plugin_wallet_disconnect": "Disconnect",
