--- a/packages/shared/src/locales/en-US.json
+++ b/packages/shared/src/locales/en-US.json
@@ -246,9 +246,9 @@
     "wallet_transfer_error_gas_price_absence": "Enter a gas price",
     "popups_wallet_gas_fee_settings_min_gas_limit_tips": "Gas limit must be at least {{limit}}",
     "popups_wallet_gas_fee_settings": "Gas fee settings",
-    "plugin_wallet_connect_with": "Connect with",
-    "plugin_wallet_connect_with_retry": "Try Again",
-    "plugin_wallet_connected_with": "Connected with",
+    "plugin_wallet_connect_to": "Connect to",
+    "plugin_wallet_connect_to_retry": "Try Again",
+    "plugin_wallet_connected_to": "Connected to",
     "initializing": "Initializing...",
     "plugin_wallet_metamask_error_already_request": "You've opened the popup, please confirm.",
     "applications": "Applications",
