docs(i18n): sync i18n files from Crowdin (#11016)
* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

* New translations en-us.json (Korean)
docs(i18n): sync translation en-us.json for Korean

--- a/packages/plugins/Trader/src/locales/ko-KR.json
+++ b/packages/plugins/Trader/src/locales/ko-KR.json
@@ -1,1 +1,52 @@
-{}
+{
+    "promote": "트위터에서 토큰을 즉식적으로 거래합니다. Mask.io 설치하여 멀티체인 Dex를 탐색해 보세요.",
+    "account_promote$twitter": "@$t(mask:twitter_account) 팔로우하여 트위터에서 크립토를 거래하세요.",
+    "account_promote$facebook": "@$t(mask:facebook_account) 팔로우하여 페이스북에서 크립토를 거래하세요.",
+    "share_text": "방금 {{input_amount}} {{input_symbol}}을(를) {{output_amount}} {{output_symbol}}로 스왑했습니다. {{account_promote}}\n$t(mask:hash_tag)",
+    "impact_warning": "가격 영향 주의",
+    "risk_warning": "리스크 주의",
+    "risk_warning_description": "거래하실 금액은 현재 시세 대비 <span>{{impact}} </span> 의 가격 하락을 미칠 겁니다. 이 경우에는 <span>{{lostSymbol}}</span>  나 <span>{{- lostValue}}</span>의 손실을 입힐 수 있습니다.",
+    "adjust_order": "오더 조정",
+    "make_trade_anyway": "즉시 거래",
+    "swap_failed": "스왑 실패",
+    "swap_failed_description": "네트워크나 Dex 제공자 오류",
+    "swap": "스왑",
+    "congratulations": "축하합니다!",
+    "swap_successfully_description": "스왑 {{input}} for {{output}}",
+    "plugin_wallet_snackbar_wait_for_confirming": "이 거래를 월렛에서 확인하세요",
+    "plugin_wallet_snackbar_hash": "거래 제출 완료",
+    "plugin_wallet_snackbar_confirmed": "거래 확인 완료",
+    "plugin_wallet_snackbar_success": "거래 성공",
+    "plugin_wallet_snackbar_failed": "거래 실패",
+    "plugin_wallet_snackbar_swap_successful": "토큰 스왑 성공",
+    "plugin_wallet_snackbar_add_nft_successful": "NFT 추가 성공",
+    "plugin_wallet_snackbar_swap_token": "토큰 스왑",
+    "share": "공유",
+    "plugin_trader_fail_to_load": "시세 정보 로드 실패  ",
+    "plugin_trader_switch_provider": "{{provider}} 로 전환",
+    "plugin_trader_swap_description": "팝업 트레이딩 기능으로 인기 크립토의 가격을 바로 확인하고 거래할 수 있습니다. 또한 최저의 성과를 내는 매니저에게 투자할 수 있습니다.",
+    "plugin_trader_tutorial": "튜토리얼",
+    "plugin_trader_what_is_lbp": "LBP가 무엇입니까?",
+    "plugin_trader_lbp_intro": "실드 블루 라인은 {{symbol}}의 LBP에서 {{symbol}}의 역사 가격을 보여줍니다. 아무도 사지 않으면 가격이 계속 내려갈 수도 있다. 현명하게 투자 결정을 내리세요.",
+    "plugin_trader_no_pools_found": "풀이 없습니다.",
+    "plugin_trader_safety_agree": "동의합니다.",
+    "plugin_trader_view_on_etherscan": "Etherscan에서 보기",
+    "plugin_trader_safety_alert_title": "토큰 안정성 알림",
+    "plugin_trader_safety_alert": "누구나 ERC20 토큰을 만들고 이름을 지을 수 있다. 토큰이 없는 프로젝트를 대표한다고 주장하는 토큰과 현존 토큰의 가짜 버전을 만드는 경우도 많습니다. Etherscan과 마찬가지로 이 사이트는 모든 ERC20 토큰에 대한 분석을 자동으로 추적합니다. ERC20 토큰과 상호 작용하기 전에 미리 잘 조사하시길 바랍니다.",
+    "plugin_trader_total_supply": "총 공급량",
+    "plugin_trader_circulating_supply": "유통량",
+    "plugin_trader_accept": "동의",
+    "plugin_trader_volume_24": "24 시간 거래량",
+    "plugin_trader_market_cap": "시가 총액",
+    "plugin_trader_risk_warning_short": "리스크 경고",
+    "plugin_trader_risk_warning": "스왑 토큰 컨트렉트 리스크 확인",
+    "plugin_trader_make_risk_trade": "계속 스왑",
+    "plugin_trader_dear_user": "안녕하세요 유저님,",
+    "plugin_trader_user_warning": "확인 버튼을 클릭하면 잠재적 위험을 감수하고 거래를 진행하는 데 동의한다는 말입니다.",
+    "plugin_trader_price_updated": "가격이 만료되었습니다.",
+    "plugin_trader_market_statistic": "마켓 통계",
+    "plugin_trader_floor_price": "바닥 가격",
+    "plugin_trader_trending": "추세",
+    "plugin_trader_highest_price": "최고 가격",
+    "plugin_trader_total_volume": "총 거래량"
+}
