fix: mf-5549 add contact placeholder text

--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -271,7 +271,7 @@
     "export": "Export",
     "confirm_swap_risk": "Confirm swap risk",
     "wallet_load_retry": "Failed to load {{symbol}}. Click to retry.",
-    "wallet_name": "Wallet Name",
+    "name": "Name",
     "wallet_rename": "Rename Wallet",
     "wallet_loading_nft_contract": "Loading NFT contract...",
     "wallet_search_contract_no_result": "No results or contract address does not meet the query criteria.",
@@ -1138,7 +1138,7 @@
     "wallet_edit_contact_successfully": "Edit contact successfully.",
     "wallet_delete_contact": "Delete Contact",
     "wallet_delete_contact_successfully": "Delete contact successfully.",
-    "wallet_name_wallet": "Name your wallet",
+    "wallet_name": "Name your wallet",
     "wallet_account": "Wallet Account",
     "wallet_imported": "Imported",
     "scan_address_to_payment": "Scan QR code to receive payment",
