--- a/packages/plugins/CrossChainBridge/src/locales/ko-KR.json
+++ b/packages/plugins/CrossChainBridge/src/locales/ko-KR.json
@@ -1,5 +1,5 @@
 {
     "__plugin_name": "Cross-chain",
     "official": "Official",
-    "cbridge_intro": "Powered by Celer Network. Support $Mask!"
+    "cbridge_intro": "Powered by Celer Network. Support $MASK!"
 }
