--- a/packages/plugins/CrossChainBridge/src/locales/zh-CN.json
+++ b/packages/plugins/CrossChainBridge/src/locales/zh-CN.json
@@ -1,5 +1,5 @@
 {
     "__plugin_name": "跨链",
     "official": "官方",
-    "cbridge_intro": "由Celer提供支持，支持 $Mask！"
+    "cbridge_intro": "由Celer提供支持，支持 $MASK！"
 }
