fix: mf-5558 merge account icons

--- a/packages/shared/src/locales/en-US.json
+++ b/packages/shared/src/locales/en-US.json
@@ -176,6 +176,10 @@
     "account_icon_tooltips_only$facebook": "Data source is retrieved from Facebook profile",
     "account_icon_tooltips$next_id": "Data source is retrieved from NEXT.ID.",
     "account_icon_tooltips_only$next_id": "Data source is retrieved from NEXT.ID.",
+    "account_icon_merged_tooltip$normal": "Data source is retrieved from ",
+    "account_icon_merged_tooltip$twitter": "Data source is retrieved from Twitter profile and ",
+    "account_icon_merged_tooltip$facebook": "Data source is retrieved from Facebook profile and ",
+    "account_icon_merged_tooltip$next_id": "Data source is retrieved from NEXT.ID and ",
     "wallet_status_button_copy_address": "Copy Address",
     "copy_success_of_wallet_addr": "Copy wallet address successfully!",
     "persona_boundary_create_persona": "Create Persona",
