--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -728,6 +728,7 @@
     "popups_wallet_settings_auto_lock_number_only": "This field is number required.",
     "popups_wallet_settings_current_management_account": "Current Management Account",
     "popups_wallet_settings_local_persona_or_wallet_only": "Local persona or wallet only",
+    "popups_wallet_settings_hiding_scam_transactions": "Hiding Scam Transactions",
     "popups_wallet_connected_sites": "Connected sites",
     "popups_wallet_connected_sites_description": "Wallet name is connected to these sites, they can view your account address.",
     "popups_wallet_disconnect_confirm": "Are your sure you want to disconnect? You may lose site functionality.",
