feat: mf-5567 add friend tech plugin

--- a/packages/shared/src/locales/en-US.json
+++ b/packages/shared/src/locales/en-US.json
@@ -17,6 +17,7 @@
     "snackbar_done": "Done",
     "added_by_user": "Added by user",
     "all": "All",
+    "no_data": "No Data",
     "retry": "Retry",
     "gwei": "Gwei",
     "import": "Import",
