feat: implement follow with lens api v2

--- a/packages/plugins/Web3Profile/src/locales/en-US.json
+++ b/packages/plugins/Web3Profile/src/locales/en-US.json
@@ -51,6 +51,7 @@
     "listed": "Listed",
     "lens": "Lens",
     "lenster": "Lenster",
+    "hey": "Hey",
     "unlisted": "Unlisted",
     "add_wallet": "Add Wallet",
     "add_wallet_to_connected": "No connected wallet. Please add wallet.",
