feat: upgrade lens query api (#11109)
* feat: upgrade lens query api

* feat: implement follow with lens api v2

* chore: cspell

* chore: unknown follow modulle tips

* fix: prettier

* chore: remove useless file

---------

Co-authored-by: nuanyang233 <nuanyang233@users.noreply.github.com>

--- a/packages/plugins/Web3Profile/src/locales/en-US.json
+++ b/packages/plugins/Web3Profile/src/locales/en-US.json
@@ -19,6 +19,7 @@
     "following_action": "Following",
     "follow_lens_handle": "Follow Lens handle",
     "unfollow_lens_handle": "Unfollow lens handle",
+    "can_not_follow": "This profile can not be followed.",
     "followers": "<strong>{{followers}}</strong> Followers",
     "following": "<strong>{{following}}</strong> Following",
     "follow_for_fees": "Follow for {{value}} {{symbol}}",
@@ -51,6 +52,7 @@
     "listed": "Listed",
     "lens": "Lens",
     "lenster": "Lenster",
+    "hey": "Hey",
     "unlisted": "Unlisted",
     "add_wallet": "Add Wallet",
     "add_wallet_to_connected": "No connected wallet. Please add wallet.",
