--- a/packages/plugins/Web3Profile/src/locales/en-US.json
+++ b/packages/plugins/Web3Profile/src/locales/en-US.json
@@ -10,7 +10,7 @@
     "web3_profile": "Web3 Profile",
     "EVM_wallet": "EVM Wallet",
     "edit_profile_in_lenster": "Edit your profile in lenster",
-    "edit_profile_tips": "{{- profile}} is owned by the current connected wallet. Please go to lenster.xyz to edit profile.",
+    "edit_profile_tips": "{{- profile}} is owned by the current connected wallet. Please go to hey.xyz to edit profile.",
     "Solana_wallet": "Solana Wallet",
     "Flow_wallet": "Flow Wallet",
     "network_error": "Network error, try again",
@@ -19,6 +19,7 @@
     "following_action": "Following",
     "follow_lens_handle": "Follow Lens handle",
     "unfollow_lens_handle": "Unfollow lens handle",
+    "can_not_follow": "This profile can not be followed.",
     "followers": "<strong>{{followers}}</strong> Followers",
     "following": "<strong>{{following}}</strong> Following",
     "follow_for_fees": "Follow for {{value}} {{symbol}}",
@@ -27,6 +28,7 @@
     "follow_with_charge_tips": "No enough balance to complete follow process.",
     "follow_with_revert_tips": "This user has banned follow function.",
     "follow_wallet_tips": "Current wallet does not support to interact with Lens protocol.",
+    "follow_with_out_handle_tips": "The current wallet does not hold a lens and cannot follow/unfollow",
     "follow_gas_tips": "Need to pay gas fee to follow this account.",
     "lens_follow": "Lens Follow",
     "lens_unfollow": "Lens Unfollow",
@@ -51,6 +53,7 @@
     "listed": "Listed",
     "lens": "Lens",
     "lenster": "Lenster",
+    "hey": "Hey",
     "unlisted": "Unlisted",
     "add_wallet": "Add Wallet",
     "add_wallet_to_connected": "No connected wallet. Please add wallet.",
