fix(FriendTech): mf-5616 decode uesr nickname in i18n

--- a/packages/plugins/FriendTech/src/locales/en-US.json
+++ b/packages/plugins/FriendTech/src/locales/en-US.json
@@ -23,10 +23,10 @@
     "keys_other": "{{count}} keys",
     "no_keys$other": "There's no one holding. <a>go explore</a>",
     "no_keys$mine": "You don't have any keys in your wallet. <a>go explore</a>",
-    "key_trade$buy_one": "{{trader}} bought {{count}} <other>{{subject}}</other> key",
-    "key_trade$buy_other": "{{trader}} bought {{count}} <other>{{subject}}</other> keys",
-    "key_trade$sell_one": "{{trader}} sold {{count}} <other>{{subject}}</other> key",
-    "key_trade$sell_other": "{{trader}} sold {{count}} <other>{{subject}}</other> keys",
+    "key_trade$buy_one": "{{- trader}} bought {{count}} <other>{{- subject}}</other> key",
+    "key_trade$buy_other": "{{- trader}} bought {{count}} <other>{{- subject}}</other> keys",
+    "key_trade$sell_one": "{{- trader}} sold {{count}} <other>{{- subject}}</other> key",
+    "key_trade$sell_other": "{{- trader}} sold {{count}} <other>{{- subject}}</other> keys",
     "sell_summary_one": "Sell <bold>{{count}}</bold> key for <bold>{{cost}}</bold> ETH",
     "sell_summary_other": "Sell <bold>{{count}}</bold> keys for <bold>{{cost}}</bold> ETH",
     "you_currently_hold_one": "You currently hold: {{count}} key",
