docs(i18n): sync i18n files from Crowdin (#11150)
* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

--- a/packages/mask/shared-ui/locales/ja-JP.json
+++ b/packages/mask/shared-ui/locales/ja-JP.json
@@ -881,5 +881,28 @@
     "popups_backup_password_tips": "秘密鍵をエクスポートするには、バックアップパスワードを設定してください。",
     "popups_backup_password_inconsistency": "入力された二つのパスワードに矛盾があります。",
     "popups_backup_password_incorrect": "バックアップパスワードが正しくありません。",
+    "popups_backup_password_invalid": "ペルソナ秘密鍵をエクスポートするには、バックアップパスワードを入力してください。",
+    "popups_backup_password_set_successfully": "バックアップパスワードの設定が完了しました",
+    "popups_export_private_key_tips": "このエクスポートは秘密鍵をエクスポートするためのものです。他のデータはエクスポートしません。 さらに多くのデータが必要な場合は、設定: <a> グローバルバックアップ </a> に移動してください。",
+    "popups_export_json_file_tips": "このファイルは暗号化され、現在のパスワードで保存されています。 ウォレットをインポートするには、このファイルを復号するために現在のパスワードが必要です。",
+    "popups_export_keystore_tips": "このJSONファイルは現在の支払いパスワードで暗号化されています。このウォレットをインポートする際に復号するには同じパスワードが必要です。",
+    "popups_log_out_tips": "ログアウト後、関連付けられたソーシャルアカウントは過去の暗号化されたメッセージを復号することができなくなります。 アカウントを再利用する必要がある場合は、ID、プライベートキー、ローカルまたはクラウドバックアップを使用してアカウントを復元できます。",
+    "popups_log_out_with_smart_pay_tips_one": "ご注意ください: この Persona {{persona}} は上記のSmartPayウォレットの管理アカウントです。 ペルソナをログアウトした後、SmartPayウォレットを使用してブロックチェーンとやり取りすることはできません。",
+    "popups_log_out_with_smart_pay_tips_other": "ご注意ください: この Persona {{persona}} は上記のSmartPayウォレットの管理アカウントです。 ペルソナをログアウトした後、SmartPayウォレットを使用してブロックチェーンとやり取りすることはできません。",
+    "popups_log_out_successfully": "ログアウト完了",
+    "popups_log_out_failed": "ログアウトに失敗しました。",
+    "popups_profile_photo_image": "画像",
+    "popups_profile_photo_nfts": "NFTs",
+    "popups_profile_photo_drag_file": "ここにファイルをドラッグ&ドロップしてください",
+    "popups_profile_photo_size_limit": "サイズ制限：10 MB",
+    "popups_profile_photo_browser_file": "ブラウザファイル",
+    "popups_select_and_connect_wallet": "選択してウォレットに接続",
+    "popups_set_avatar_successfully": "アバターを設定しました",
+    "popups_set_avatar_failed": "アバターを設定できませんでした。",
+    "popups_wallet_request_source": "リクエストソース",
+    "popups_wallet_sign_message": "署名メッセージ",
+    "popups_wallet_unlock_erc20_title": "<br /> あなたの{{symbol}}へのアクセス許可を与えますか？",
+    "popups_wallet_unlock_erc20_tips": "許可を与えることにより、以下の <br /> 契約があなたの資金にアクセスすることを許可しています",
+    "popups_wallet_unlock_erc20_placeholder": "最大支出上限を入力してください",
     "wallet_name": "ウォレット名"
 }
