fix: mf-5567 adjust ui

--- a/packages/plugins/FriendTech/src/locales/en-US.json
+++ b/packages/plugins/FriendTech/src/locales/en-US.json
@@ -5,7 +5,7 @@
     "key_price": "Key Price",
     "your_key": "Your Key",
     "you_own": "You Own",
-    "key": "Key",
+    "key": "Keys",
     "holders": "Holders",
     "holding": "Holding",
     "history": "History",
@@ -19,8 +19,8 @@
     "your_rank": "Your Rank",
     "total_value": "Total Value",
     "price_tooltip": "The price of next share is equal to the S^2 / 16000*1 ether where S is the current number of keys.",
-    "keys_one": "{{count}} key",
-    "keys_other": "{{count}} keys",
+    "keys_one": "{{count}} Key",
+    "keys_other": "{{count}} Keys",
     "no_keys$other": "There's no one holding. <a>go explore</a>",
     "no_keys$mine": "You don't have any keys in your wallet. <a>go explore</a>",
     "key_trade$buy_one": "{{- trader}} bought {{count}} <other>{{- subject}}</other> key",
