fix: mf-5634 twitter queryIds are outdated

--- a/packages/mask/shared-ui/locales/ja-JP.json
+++ b/packages/mask/shared-ui/locales/ja-JP.json
@@ -101,8 +101,8 @@
     "application_display_tab_plug_app-unlisted-placeholder": "設定のアイコンをクリックして、アプリボードに表示します。",
     "application_settings_tab_plug_app-unlisted-placeholder": "アプリのアイコンをクリックして、アプリボードに表示します。",
     "persona_load_failed": "読み込み失敗",
-    "additional_post_box__encrypted_post_pre": "#mask_io で復号しましょう！ {{encrypted}}",
-    "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "こんにちは、#mask_io @{{account}} でラッキードロップを獲得しましょう。 \n\n$t(promote_red_packet)\n {{encrypted}}",
+    "additional_post_box__encrypted_post_pre": "#mask_io で復号しましょう！ {{- encrypted}}",
+    "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "こんにちは、#mask_io @{{account}} でラッキードロップを獲得しましょう。 \n\n$t(promote_red_packet)\n {{- encrypted}}",
     "additional_post_box__encrypted_post_pre_red_packet": "こんにちは、#mask_io @{{account}} でラッキードロップを獲得しましょう。 \n\n$t(promote_red_packet)\n {{encrypted}}",
     "additional_post_box__encrypted_post_pre_file_service_sns_official_account": "$t(promote_file_service)\n {{encrypted}}",
     "additional_post_box__encrypted_post_pre_file_service": "$t(promote_file_service) {{encrypted}}",
