--- a/packages/mask/shared-ui/locales/zh-CN.json
+++ b/packages/mask/shared-ui/locales/zh-CN.json
@@ -101,8 +101,8 @@
     "application_display_tab_plug_app-unlisted-placeholder": "点击设置图标进入设置页面，在应用面板上设置显示应用。",
     "application_settings_tab_plug_app-unlisted-placeholder": "点击应用图标将会在应用列表中显示。",
     "persona_load_failed": "加载失败",
-    "additional_post_box__encrypted_post_pre": "安装 #mask_io 解密此贴文 ！ {{encrypted}}",
-    "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "使用 #mask_io 来领取这个红包！@{{account}} \n\n$t(promote_red_packet)\n {{encrypted}}",
+    "additional_post_box__encrypted_post_pre": "安装 #mask_io 解密此贴文 ！ {{- encrypted}}",
+    "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "使用 #mask_io 来领取这个红包！@{{account}} \n\n$t(promote_red_packet)\n {{- encrypted}}",
     "additional_post_box__encrypted_post_pre_red_packet": "使用 #mask_io 来认领这个红包！@{{encrypted}}",
     "additional_post_box__encrypted_post_pre_file_service_sns_official_account": "$t(promote_file_service)\n {{encrypted}}",
     "additional_post_box__encrypted_post_pre_file_service": "$t(promote_file_service) {{encrypted}}",
