--- a/packages/mask/shared-ui/locales/ja-JP.json
+++ b/packages/mask/shared-ui/locales/ja-JP.json
@@ -101,8 +101,8 @@
     "application_display_tab_plug_app-unlisted-placeholder": "設定のアイコンをクリックして、アプリボードに表示します。",
     "application_settings_tab_plug_app-unlisted-placeholder": "アプリのアイコンをクリックして、アプリボードに表示します。",
     "persona_load_failed": "読み込み失敗",
-    "additional_post_box__encrypted_post_pre": "#mask_io で復号しましょう！ {{- encrypted}}",
-    "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "こんにちは、#mask_io @{{account}} でラッキードロップを獲得しましょう。 \n\n$t(promote_red_packet)\n {{- encrypted}}",
+    "additional_post_box__encrypted_post_pre": "#mask_io で復号しましょう！ {{encrypted}}",
+    "additional_post_box__encrypted_post_pre_red_packet_sns_official_account": "こんにちは、#mask_io @{{account}} でラッキードロップを獲得しましょう。 \n\n$t(promote_red_packet)\n {{encrypted}}",
     "additional_post_box__encrypted_post_pre_red_packet": "こんにちは、#mask_io @{{account}} でラッキードロップを獲得しましょう。 \n\n$t(promote_red_packet)\n {{encrypted}}",
     "additional_post_box__encrypted_post_pre_file_service_sns_official_account": "$t(promote_file_service)\n {{encrypted}}",
     "additional_post_box__encrypted_post_pre_file_service": "$t(promote_file_service) {{encrypted}}",
@@ -959,6 +959,50 @@
     "popups_wallet_unlock_erc20_balance_too_high_tips": "これにより、サードパーティは、あなたのトークン残高が上限に達するまで、またはあなたが支出上限を取り消すまで、あなたのトークン残高をすべて使用することができます。これが意図的でない場合は、より低い支出上限を設定することを検討してください。",
     "popups_wallet_unlock_erc20_revoke_tips": "このコントラクトの承認は、デフォルトの入力として 0 を使用した場合に取り消されます。",
     "popups_wallet_unlock_erc20_approve_amount": "承認金額",
+    "popups_wallet_unlock_erc20_granted_to": "付与された",
+    "popups_wallet_unlock_erc721_title": "<br /> あなたの{{symbol}}へのアクセス許可を与えますか？",
+    "popups_wallet_unlock_erc721_tips": "許可を与えることにより、次の <br /> コントラクトにNFTへのアクセスを許可します。",
+    "popups_wallet_rpc_error": "ネットワークまたはRPCプロバイダエラーが発生しました。後でもう一度お試しください！",
+    "popups_wallet_gas_price_should_greater_than_zero": "ガス価格は0より大きくなければなりません",
+    "popups_settings_general": "一般",
+    "popups_settings_basic_setting": "基本設定",
+    "popups_settings_language": "言語",
+    "popups_settings_appearance": "外観",
+    "popups_settings_supported_sites": "サポートされるサイト",
+    "popups_settings_backup_and_recovery": "バックアップと復元",
+    "popups_settings_data_correlation": "データの相関値",
+    "popups_settings_cloud_backup": "クラウドバックアップ",
+    "popups_settings_local_backup": "ローカルバックアップ",
+    "popups_settings_restore_database": "データベースの復元",
+    "popups_settings_restore_database_description": "以前のデータベースバックアップから復元します。",
+    "popups_settings_backup_password": "バックアップパスワード",
+    "popups_settings_support": "サポート",
+    "popups_settings_feedback": "フィードバック",
+    "popups_settings_faq": "よくある質問と回答",
+    "popups_settings_website": "ウェブサイト",
+    "popups_settings_about": "詳細",
+    "popups_settings_version": "バージョン",
+    "popups_settings_service_agreement": "サービス利用契約",
+    "popups_settings_primary_policy": "プライバシー・ポリシー（個人情報に関する方針）",
+    "popups_settings_language_auto": "システムに従う",
+    "popups_settings_appearance_default": "システムに従う",
+    "popups_settings_appearance_light": "ライト",
+    "popups_settings_appearance_dark": "ダーク",
+    "popups_settings_select_language": "言語を選択",
+    "popups_settings_supported_sites_description": "Mask NetworkプラグインのWebサイトへの注入権限を管理します。一度オフにすると、このサイトでのプラグインの使用はサポートされなくなります。",
+    "popups_settings_supported_website_one": "<strong>{{count}}<strong> ウェブサイト",
+    "popups_settings_supported_website_other": "<strong>{{count}}<strong> ウェブサイト",
+    "popups_settings_change_backup_password": "バックアップパスワードの変更",
+    "popups_settings_new_backup_password": "新しいパスワード",
+    "popups_settings_new_backup_password_error_tips": "新しいパスワードを現在のパスワードと同じにすることはできません。",
+    "popups_settings_backup_password_invalid": "数字、文字、または特殊文字がない。",
+    "popups_settings_set_backup_password_tips": "バックアップパスワードを設定してください",
+    "popups_settings_no_backup": "バックアップはありません",
+    "popups_settings_backup_on": "{{time}} でバックアップ",
+    "popups_settings_local_backup_exist": "バックアップしました。",
+    "popups_settings_cloud_backup_exist": "メール/電話番号でバックアップしました。",
+    "popups_settings_not_set": "未設定",
+    "nft_wallet_label": "ウォレット",
     "nft_add_button_label_checking": "確認中",
     "nft_list_title": "NFT のアバター設定",
     "nft_wallet_change": "変更",
