docs(i18n): sync i18n files from Crowdin (#11187)
* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

--- a/packages/mask/shared-ui/locales/ja-JP.json
+++ b/packages/mask/shared-ui/locales/ja-JP.json
@@ -1003,6 +1003,12 @@
     "popups_settings_cloud_backup_exist": "メール/電話番号でバックアップしました。",
     "popups_settings_not_set": "未設定",
     "nft_wallet_label": "ウォレット",
+    "plugin_profile_no_wallets": "ここにウォレットを接続してください。<br/>このセクションは暗号化された友達に表示されます。<br/>表示内容には、デジタルアート、寄付、バッジ<br/>その他チェーンに関する公開情報が含まれます。",
+    "nft_input_address_label": "コントラクトアドレスを入力してください。",
+    "nft_input_tokenid_label": "トークンIDを入力してください",
+    "nft_owner_hint": "コントラクトアドレスが正しくないか、コレクションはあなたに属していません",
+    "nft_add_dialog_title": "コレクションを追加",
+    "nft_add_button_label": "追加",
     "nft_add_button_label_checking": "確認中",
     "nft_list_title": "NFT のアバター設定",
     "nft_wallet_change": "変更",
@@ -1067,5 +1073,74 @@
     "decentralized_search_feature_nft_name": "NFTs",
     "decentralized_search_feature_nft_description": "NFT コレクションまたはそのシンボルの名前で検索し、最適化された結果を得ます。",
     "decentralized_search_feature_wallet_name": "ENSまたはウォレットアドレス",
-    "wallet_name": "ウォレット名"
+    "decentralized_search_feature_wallet_description": "ENSドメインまたはウォレットアドレスで検索すると、最適化された結果が得られます。",
+    "applications_create_persona_hint": "本機能を利用するには、ペルソナを作成し、アカウントを認証してください。",
+    "applications_create_persona_title": "ペルソナ",
+    "applications_create_persona_action": "ペルソナを作成",
+    "plugin_collectible_insufficient_balance": "残高が不足しています",
+    "persona_boundary_create_persona": "ペルソナを作成",
+    "persona_boundary_connect_persona": "ペルソナを接続",
+    "persona_boundary_verify_persona": "Twitter IDの認証",
+    "plugin_wallet_qr_code_with_wallet_connect": "WalletConnect対応ウォレットでQRコードをスキャン",
+    "plugin_wallet_connect_dialog_title": "ウォレット接続",
+    "plugin_wallet_select_provider_dialog_title": "ウォレットを接続",
+    "recent_transaction_success": "完了",
+    "recent_transaction_failed": "失敗",
+    "wallet_status_pending_clear": "消去",
+    "wallet_status_pending_one": "{{count}} 保留中",
+    "wallet_status_pending_other": "{{count}} 保留中",
+    "wallet_status_pending_clear_all": "すべて消去",
+    "wallet_risk_warning_no_select_wallet": "ウォレットを選択していません",
+    "wallet_risk_warning_dialog_title": "リスク警告",
+    "incorrect_chain_id": "不正なチェーンIDです",
+    "invalid_number": "無効な番号です",
+    "saved_network_successfully": "ネットワークを保存しました",
+    "adding_network_successfully": "ネットワークを追加しました",
+    "deleted_network_successfully": "ネットワークを削除しました。",
+    "hided_token_successfully": "正常に非表示になりました",
+    "not_enough_data_to_present": "データが足りません。",
+    "wallet_send": "送る",
+    "wallet_receive": "受取",
+    "wallet_swap": "スワップ",
+    "wallet_add_contact": "連絡先を追加する",
+    "wallet_add_contact_successfully": "連絡先を追加しました。",
+    "wallet_edit_contact": "連絡先を編集",
+    "wallet_edit_contact_successfully": "連絡先を編集しました。",
+    "wallet_delete_contact": "連絡先を削除",
+    "wallet_delete_contact_successfully": "連絡先を削除しました。",
+    "wallet_name": "ウォレット名",
+    "wallet_account": "ウォレットアカウント",
+    "wallet_imported": "インポートされました",
+    "scan_address_to_payment": "QRコードをスキャンして支払いを受け取る",
+    "wallet_connect": "ウォレット接続",
+    "wallet_connect_tips": "WalleConnect対応ウォレットでQRコードをスキャン",
+    "empty": "空です",
+    "hide_token_symbol": "{{- symbol}} を非表示",
+    "hide_token_description": "{{- symbol}}を非表示にしますか? このトークンをいつでも再追加することで再表示できます。",
+    "scam_tx": "Scam tx",
+    "to_address": "{{address}} に",
+    "other_address": "<addr>{{address}}</addr> より",
+    "other_address$from": "<addr>{{address}}</addr> より",
+    "other_address$to": "<addr>{{address}}</addr> に",
+    "transaction_status": "ステータス：",
+    "transaction_failed": "失敗しました",
+    "transaction_success": "完了",
+    "transaction_pending": "保留中",
+    "transaction_base": "ベース",
+    "transaction_from": "から",
+    "transaction_to": "宛先",
+    "transaction_link": "リンク",
+    "transaction_hash": "トランザクションハッシュ",
+    "transaction_gas_limit": "ガス制限 (単位)",
+    "transaction_gas_used": "ガス使用量 (単位)",
+    "transaction_gas_price": "ガス価格 (GWEI)",
+    "transaction_priority_fee": "優先料金（GWEI）",
+    "transaction_max_fee": "最大料金 (GWEI)",
+    "transaction_fee": "トランザクション手数料",
+    "activity_log": "行動記録",
+    "transaction_confirmed_at": "トランザクションは {{- datetime}}で確認されました",
+    "transaction_completed_at": "トランザクションが完了し、 {{- datetime}}でブロックチェーンに記録されました",
+    "collectible_title": "コレクティブ",
+    "collectible_description": "説明",
+    "collectible_properties": "プロパティ"
 }
