docs(i18n): sync i18n files from Crowdin (#11195)
* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

* New translations en-us.json (Japanese)
docs(i18n): sync translation en-us.json for Japanese

--- a/packages/plugins/GoPlusSecurity/src/locales/ja-JP.json
+++ b/packages/plugins/GoPlusSecurity/src/locales/ja-JP.json
@@ -1,1 +1,32 @@
-{}
+{
+    "__plugin_name": "セキュリティを確認",
+    "powered_by_go_plus": "Go＋により提供されています+",
+    "powered_by": "以下により提供されています",
+    "go_plus": "Go+",
+    "high_risk": "高リスク",
+    "low_risk": "低リスク",
+    "confirm_swap_risk": "スワップリスクの確認",
+    "medium_risk": "中程度のリスク",
+    "search": "検索",
+    "search_input_placeholder": "トークンコントラクトのアドレスを入力してください。",
+    "token_info": "トークン情報",
+    "more_details": "詳細情報",
+    "security_detection": "セキュリティの検出",
+    "risky_factors": "{{quantity}} リスク要因",
+    "attention_factors": "{{quantity}} 注意要因",
+    "risky_factor": "{{quantity}} リスク要因",
+    "attention_factor": "{{quantity}} 注意要因",
+    "security_info_code_not_verify_title": "コントラクトのソースコードが検証されていません",
+    "security_info_code_not_verify_message": "このトークンコントラクトは確認されていません。コントラクトコードの詳細を確認することはできません。未委託のトークンコントラクトは、ユーザーから資産を詐取する悪意のある機能を持っている可能性があります。",
+    "security_info_functions_that_can_suspend_trading_title": "取引を一時停止できる機能",
+    "security_info_functions_that_can_suspend_trading_message": "サスペンド可能なコードが含まれている場合、トークンは購入も販売もされていない可能性があります(ハニーポットリスク)。 ",
+    "token_info_token_name": "トークン名",
+    "token_info_token_contract_address": "トークンコントラクトアドレス",
+    "token_info_contract_creator": "コントラクト作成者",
+    "token_info_contract_owner": "コントラクト所有者",
+    "token_info_total_supply": "総供給",
+    "token_market_cap": "時価総額",
+    "default_placeholder": "注意: 詐欺行為の検出は100%保証されない場合があります.",
+    "not_found_tip_title": "結果が見つかりません。チェーンネットワークエラー、オンチェーンデータ異常、トークンアドレスがカバーされていない可能性があります。以下のように確認してください：",
+    "not_found_tip_network_error": "1. ネットワークが動作していることを確認してください。"
+}
